--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,12 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@econogest-front/dashboard": [
-        "libs/dashboard/src/index.ts"
-      ],
-      "@econogest-front/transactions": [
-        "libs/transactions/src/index.ts"
-      ]
+      "@econogest-front/dashboard": ["libs/dashboard/src/index.ts"],
+      "@econogest-front/transactions": ["libs/transactions/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
