--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "prettier:check": "prettier . -c",
     "prettier:write": "prettier . -w",
     "test:econogest": "nx test econogest-front",
+    "test:econogest:watch": "nx test econogest-front --watch",
     "test:transactions": "nx test transactions",
+    "test:transactions:watch": "nx test transactions --watch",
     "test:component:transactions": "nx component-test transactions",
-    "test:dashboard": "nx test dashboard"
+    "test:component:transactions:watch": "nx component-test transactions --watch",
+    "test:dashboard": "nx test dashboard",
+    "test:dashboard:watch": "nx test dashboard --watch"
   },
   "private": true,
   "dependencies": {
@@ -29,11 +33,13 @@
     "@angular-devkit/build-angular": "~18.2.0",
     "@angular-devkit/core": "~18.2.0",
     "@angular-devkit/schematics": "~18.2.0",
-    "@angular/cli": "~18.2.0",
-    "@angular/material": "~18.2.11",
     "@angular/cdk": "~18.2.11",
+    "@angular/cli": "~18.2.0",
     "@angular/compiler-cli": "~18.2.0",
     "@angular/language-service": "~18.2.0",
+    "@angular/material": "~18.2.11",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@cypress/webpack-dev-server": "^3.8.0",
     "@eslint/js": "^9.8.0",
     "@nx/angular": "20.0.7",
@@ -57,6 +63,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^3.5.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.1.0",
