test(nx): ignorer le cloud pour les tests

--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "build:prod": "nx build econogest-front",
     "prettier:check": "prettier . -c",
     "prettier:write": "prettier . -w",
-    "test:econogest": "nx test econogest-front",
+    "test:econogest": "nx test econogest-front --no-cloud",
     "test:econogest:watch": "nx test econogest-front --watch",
-    "test:transactions": "nx test transactions",
+    "test:transactions": "nx test transactions --no-cloud",
     "test:transactions:watch": "nx test transactions --watch",
-    "test:component:transactions": "nx component-test transactions",
+    "test:component:transactions": "nx component-test transactions --no-cloud",
     "test:component:transactions:watch": "nx component-test transactions --watch",
-    "test:dashboard": "nx test dashboard",
+    "test:dashboard": "nx test dashboard --no-cloud",
     "test:dashboard:watch": "nx test dashboard --watch"
   },
   "private": true,
