CI(environnement): disable nx cloud

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      NX_NO_CLOUD: true
     strategy:
       matrix:
         node-version:
